[package]
name = "npm-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
http = "0.2.8"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.7", features = ["io"] }
warp = "0.3.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
bytes = "1.0"
async-trait = "0.1.58"
moka = { version = "0.9", features = ["future"] }
